?      njf - NumberFactory has been changed to create the number from a String
             representation (in order to allow creation of arbitrary precision
             numbers without the limitations of double)

Many previous changes not included here. See the documentation for details.

== org.lsmp.* =======================================================

Apr 04 06 rjm - Fixed bug with conversion of (a+b)-(c+d) to polynomial in sjep.
Mar 11 06 rjm - Added serial version tags where needed
Mar 4  06 rjm - fixed bug in SJep 2x+x now correctly simplifies to 3x.
Dec 16 05 rjm - Added implementations of checkNumberOfParameters
		for necessary functions.

Dec 08 05 rjm  - Added MDivide function
			   - Fixed bug in MMultiply dividing Tensor by a scaler.
				 
July 28 05 rjm - Added a Define function
			   - NodeFactory now calls the jep evaluator in buildConstantNode.
			   - SimplificationVisitor returns now returns null if null is parsed
			   	rather than throwing an error.
			   - added exp() function to XJep
			   - added macrocomplex to xjep (Why?)
			   	
July 14 05 rjm - Restructured DJep so standard diffrules in DJep rather than DiffVisitor

June 07 05 rjm - Fixed bug in ele which only accepted Double arguments.

May 02 05 rjm - added toBase pfmc and a BaseFormat NumberFormat object.

Apr 24 05 rjm - Reworked junit tests using inheretance.

Apr 24 05 rjm - Simpson and Trapesium functionsa added to XJep.

Apr 03 05 rjm - DifferentationVisitor is now smarter when calculating zero derivatives
			  - PrintVisitor.getMode(int testmode) added.
			  
Apr 01 05 rjm - MVector, Matrix, Tensor no longer extend number.

Apr 01 05 rjm - Added det(), trace(), vsum(), trans(), getDiag(), diag(), id(),
	GenMat, Map function to vectorJep. Need to check diff and matrixJep functionality.

Apr 01 05 rjm - added SpecialPreprocessorI interface for matrixJep functions.

Feb 13 05 rjm - added len() and size() functions