@@ -6,52 +6,16 @@ package org.lsmp.djep.rpe;
 /** A list of commands */
 public final class RpCommandList {
 	
-	/** Data type for the command string */
-	static final class RpCommand {
-		short command;
-		short aux1; 
-		RpCommand(short command){
-			this.command = command; this.aux1 = -1;
-		}
-		RpCommand(short command,short aux){
-			this.command = command; this.aux1 = aux;
-		}
-		public String toString() {
-			switch(command)
-			{
-				case RpEval.CONST: return "Constant\tno "+aux1;
-				case RpEval.VAR: return "Variable\tnum "+aux1;
-				case RpEval.ADD: return "ADD";
-				case RpEval.SUB: return "SUB";
-				case RpEval.MUL: return "MUL";
-				case RpEval.DIV: return "DIV";
-				case RpEval.MOD: return "MOD";
-				case RpEval.POW: return "POW";
-				case RpEval.AND: return "AND";
-				case RpEval.OR: return "OR";
-				case RpEval.NOT: return "NOT";
-				case RpEval.LT: return "LT";
-				case RpEval.LE: return "LE";
-				case RpEval.GT: return "GT";
-				case RpEval.GE: return "GE";
-				case RpEval.EQ: return "EQ";
-				case RpEval.NE: return "NE";
-				case RpEval.ASSIGN: return "Assign\tnum "+aux1;
-				case RpEval.FUN: return "Function\tnum "+aux1;
-			}
-			return "WARNING unknown command: "+command+" "+aux1;
-		}
-	}
-
 	/** Incremental size for list of commands **/
 	private static final int STACK_INC=10;
 	/** List of commands **/
 	RpCommand commands[] = new RpCommand[STACK_INC];
 	/** Current position in the command Stack. **/
 	private short commandPos;
-	
+	private RpEval rpe;
 	/** Package private constructor */
-	RpCommandList() {}
+	private RpCommandList() {}
+	RpCommandList(RpEval rpe) {this.rpe = rpe;}
 	/** Adds a command to the list */
 	final void addCommand(short command,short aux)
 	{
@@ -61,7 +25,7 @@ public final class RpCommandList {
 			System.arraycopy(commands,0,newCommands,0,commands.length);
 			commands = newCommands;
 		}
-		commands[commandPos]=new RpCommand(command,aux);
+		commands[commandPos]=new RpCommand(rpe,command,aux);
 		++commandPos;
 //		++maxCommands;
 	}
@@ -73,13 +37,13 @@ public final class RpCommandList {
 			System.arraycopy(commands,0,newCommands,0,commands.length);
 			commands = newCommands;
 		}
-		commands[commandPos]=new RpCommand(command);
+		commands[commandPos]=new RpCommand(rpe,command);
 		++commandPos;
 //		++maxCommands;
 	}
 
 	public int getNumCommands() { return commandPos;}
-	
+	public RpCommand getCommand(int i) { return commands[i]; }
 	public String toString() {
 		StringBuffer sb = new StringBuffer();
 		for(int i=0;i<commandPos;++i) {
